MB-38978: Gather "dcp" stats group in a background task

The "dcp" stats group includes aggregated values which may become
expensive to collect if there are lots of dcp streams.

To avoid this processing holding up a front end thread, move this
aggregation to a task.

Change-Id: Iea9b901b8d27164a0f0141967361553f0596f784
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/156699
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: James H <james.harrison@couchbase.com>